--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,16 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.graalvm.js</groupId>
+      <artifactId>js</artifactId>
+      <version>20.3.0</version>
+    </dependency>  
+    <dependency>
+      <groupId>org.graalvm.js</groupId>
+      <artifactId>js-scriptengine</artifactId>
+      <version>20.3.0</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/de.sciss/syntaxpane -->
     <dependency>
         <groupId>de.sciss</groupId>
@@ -98,7 +108,11 @@
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
+	  <configuration>
+	    <source>1.8</source>
+            <target>1.8</target>
+        </configuration>
+          <!--version>3.8.0</version-->
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
