--- a/pom.xml
+++ b/pom.xml
@@ -108,11 +108,11 @@
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-	  <configuration>
-	    <source>1.8</source>
+          <!-- <version>3.8.0</version> -->
+          <configuration>
+            <source>1.8</source>
             <target>1.8</target>
-        </configuration>
-          <!--version>3.8.0</version-->
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -165,8 +165,43 @@
             </execution>
           </executions>
         </plugin>
+        <plugin>
+          <groupId>com.coveo</groupId>
+          <artifactId>fmt-maven-plugin</artifactId>
+          <version>2.9.1</version>
+          <configuration>
+            <sourceDirectory>src/main</sourceDirectory>
+            <testSourceDirectory>src/test</testSourceDirectory>
+            <verbose>true</verbose>
+            <filesNamePattern>.*\.java</filesNamePattern>
+            <skip>false</skip>
+            <skipSourceDirectory>false</skipSourceDirectory>
+            <skipTestSourceDirectory>false</skipTestSourceDirectory>
+            <skipSortingImports>false</skipSortingImports>
+            <skipRemovingUnusedImports>false</skipRemovingUnusedImports>
+            <skipReflowingLongStrings>true</skipReflowingLongStrings>
+            <style>google</style>
+          </configuration>
+          <executions>
+            <execution>
+              <id>check-format</id>
+              <goals>
+                <goal>check</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
       </plugins>
     </pluginManagement>
+
+    <plugins>
+      <!-- This activates the linter -->
+      <plugin>
+        <groupId>com.coveo</groupId>
+        <artifactId>fmt-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
   </build>
 
   <reporting>
