--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -32,7 +32,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential
+          sudo apt-get install -y build-essential xvfb
 
       - name: Build native JNI libraries for Linux
         if: matrix.os == 'ubuntu-latest'
@@ -83,6 +83,13 @@ jobs:
       # Maven build
       - name: Build with Maven
         run: mvn clean compile -DskipTests --no-transfer-progress
+
+      # Ubuntu-specific: Start Xvfb for GUI tests
+      - name: Start Xvfb (virtual display)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          Xvfb :99 -screen 0 1024x768x24 &
+          echo "DISPLAY=:99" >> $GITHUB_ENV
 
       - name: Run tests
         continue-on-error: true
