--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
       <artifactId>jna</artifactId>
       <version>5.18.1</version>
     </dependency>
+    <dependency>
+        <groupId>com.fifesoft</groupId>
+        <artifactId>rsyntaxtextarea</artifactId>
+        <version>3.3.4</version>
+    </dependency>
   </dependencies>
 
   <build>
