Enable full compiler warnings and fix AbstractGeckoCustom.java deprecation warnings
- Change Maven compiler from -Xlint:none to -Xlint:all to enable all warnings
- Add static analysis plugins: SpotBugs, Checkstyle, PMD
- Fix 24 warnings in AbstractGeckoCustom.java:
  - Add @SuppressWarnings("deprecation") to 20 deprecated method implementations
  - Fix 2 enum access issues (StartOrStopNode.START_NODE.START_NODE -> StartOrStopNode.START_NODE)
- Maintain full backward compatibility - both old and new APIs work in parallel

This enables proper warning detection while keeping deprecated API functional
for existing GeckoSCRIPT files and external tools.

--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
             <target>21</target>
             <release>21</release>
             <compilerArgs>
-              <arg>-Xlint:none</arg>
+              <arg>-Xlint:all</arg>
             </compilerArgs>
           </configuration>
         </plugin>
@@ -173,9 +173,27 @@
                </goals>
              </execution>
            </executions>
-         </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
+          </plugin>
+          <!-- SpotBugs for bug detection -->
+          <plugin>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-maven-plugin</artifactId>
+            <version>4.8.6.6</version>
+          </plugin>
+          <!-- Checkstyle for style checking -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-checkstyle-plugin</artifactId>
+            <version>3.5.0</version>
+          </plugin>
+          <!-- PMD for code quality -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-pmd-plugin</artifactId>
+            <version>3.25.0</version>
+          </plugin>
+         <plugin>
+           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
           <configuration>
             <archive>
