--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ release/
 # Folders not part of main branch structure
 gecko-webapp/
 otherGeckoCIRCUITS/
+GeckoCIRCUITS/
 
 # Eclipse IDE files
 .classpath
